# Jaxpot

./: .gitignore  LICENSE  README.md  article-draft.md  eval_pgx.py  pyproject.toml  train_selfplay.py
config/: eval_pgx.yaml  train_selfplay.yaml
config/advantage_gatherer/: gae.yaml  per_seat_return.yaml
config/alphazero/: default.yaml
config/env/chess/: default.yaml
config/env/connect4/: default.yaml
config/eval/: connect4_baseline.yaml  default.yaml  go_9_alphazero.yaml  league.yaml  none.yaml  pgx_gardner_chess.yaml  pgx_go_9x9.yaml  quoridor_baseline.yaml  random.yaml
config/experiment/: test.yaml
config/hydra/: default.yaml
config/logger/: multi.yaml  none.yaml  tensorboard.yaml  wandb.yaml  wandb_public.yaml
config/loguru/: default.yaml
config/model/: az_net.yaml  connect4.yaml  lstm.yaml  mlp.yaml  recurrent_poker.yaml  resnet.yaml  resnet_lstm.yaml  tic_tac_toe_mlp.yaml
config/train_agent/: alphazero.yaml  ppo.yaml
config/trainer/: alphazero.yaml  ppo.yaml
docs/: custom_env.md  go_evaluation.md  modules.md
notebooks/: tic_tac_toe_colab_quickstart.ipynb
scripts/: eval_checkpoint.py  eval_dark_hex_checkpoint_elo.py  eval_go.py  eval_pgx_ckpt_vs_baseline.py  eval_pgx_policy.py  eval_vs_llm.py  generate_preflop_ev.py  go.sh  go_alphazero.sh  gtp_engine.py  plot_dark_hex_training_charts.py  record_dark_hex_matches.py  sgf_to_bayeselo.py
src/jaxpot/: __init__.py  league.py
tests/: test_collect_samples.py  test_dark_hex.py  test_evaluator_utils.py  test_liars_dice.py  test_notation.py  test_phantom_ttt.py  test_quoridor.py
visualizations/: dark_hex_7x7_matches.json  dark_hex_match_viewer.html  dark_hex_matches.json
visualizations/article_charts/: dark_hex_chart_summary.json  dark_hex_checkpoint_elos.json  dark_hex_checkpoint_round_robin.json
(+193 files in other folders)
