[project]
name = "jaxpot"
version = "0.1.0"
requires-python = ">=3.12"
description = "JAX/Flax Reinforcement Learning Library"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Norbert Ropiak" }]
dependencies = [
    "numpy>=2.3.4",
    "jax[cuda12]>=0.8.0",
    "flax>=0.12.0",
    "orbax-checkpoint>=0.11.26",
    "omegaconf>=2.3.0",
    "svgwrite>=1.4.3",
    "pgx>=2.6.0",
    "pydantic>=2.12.3",
    "einops>=0.8.1",
    "python-dotenv>=1.1.1",
    "hydra-core>=1.3.2",
    "wandb>=0.23.0",
    "distrax>=0.1.7",
    "aiohttp>=3.12.15",
    "loguru>=0.7.3",
    "tensorboardX>=2.6.2",
    "tensorboard>=2.18.0",
    "pandas>=2.3.3",
    "tqdm>=4.66.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "dm-haiku>=0.0.16",
    "mctx>=0.0.5",
    "cairosvg>=2.8.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ruff>=0.14.1",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "pytest>=8.0.0",
    "pandas-stubs>=2.3.3.251201",
]

[project.scripts]
jaxpot = "jaxpot.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jaxpot = ["data/*.npz", "py.typed"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.260113",
    "pytest>=9.0.2",
    "tensorboard-plugin-profile>=2.21.4",
    "types-tqdm>=4.67.0.20250809",
]
